# python-project-lvl4

./: .coverage  README.md  db.sqlite3  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: hexlet-cov.yml  hexlet-lint.yml  hexlet-test.yml
task_manager/: filters.py  forms.py  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/fixtures/: user.json
task_manager/migrations/: 0001_initial.py  0002_rename_statuses_status.py  0003_task.py  0004_task_time_create.py  0005_alter_task_description.py  0006_alter_task_executor.py  0007_label_attachlabeltotask_task_labels.py  0008_alter_attachlabeltotask_label_and_more.py  0009_rename_label_attachlabeltotask_attach_label_and_more.py  0010_alter_attachlabeltotask_attach_label_and_more.py  0011_alter_attachlabeltotask_attach_label_and_more.py  0012_rename_labels_task_label.py  0013_rename_label_task_labels.py
task_manager/templates/: base.html  index.html  labels_create.html  labels_delete.html  labels_list.html  labels_update.html  login.html  register.html  statuses_create.html  statuses_delete.html  statuses_list.html  statuses_update.html  tasks_create.html  tasks_delete.html  tasks_detail.html  tasks_filter.html  tasks_filter2.html  tasks_list_old.html  tasks_list_with_filter.html  test.html  update.html  users.html  users_delete.html  users_list.html  users_update (?).html
task_manager/tests/: test_label.py  test_status.py  test_task.py  test_user.py
